# mapademic

./: .gitignore  README.md  pyproject.toml
docs/: index.html
docs/superpowers/plans/: 2026-07-06-data-pipeline.md  2026-07-09-layout-communities.md  2026-07-10-visual-overhaul.md  2026-07-10-visual-pipeline.md  2026-07-11-night-polish.md  2026-07-11-search-paths-z10.md  2026-07-11-search-v2.md  2026-07-11-vector-points-experiment.md
docs/superpowers/specs/: 2026-07-05-mapademic-design.md  2026-07-10-visual-phase-design.md
pipeline/: __main__.py  build_edges.py  build_index.py  config.py  download.py  edge_px.py  extract_works.py  filter_authors.py  palette.py  prep_graph.py  regions.py  tiles.py  webcoords.py
scripts/: build_site.py  export_edges_bin.py  export_ids_bin.py  export_points_bin.py  preview.sh  qa_render.py
slurm/: layout-expanse.sbatch  layout.sbatch  run_layout.py  setup_gpu_env.sh  smoke-expanse.sbatch  smoke.sbatch  smoke_test.py
tests/: conftest.py  test_build_edges.py  test_build_index.py  test_build_site.py  test_cli.py  test_config.py  test_download.py  test_edge_px.py  test_end_to_end.py  test_export_edges_bin.py  test_export_ids_bin.py  test_export_points_bin.py  test_extract_works.py  test_filter_authors.py  test_layout_checkpoint.py  test_palette.py  test_prep_graph.py  test_regions.py  test_resource_limits.py  test_tiles.py  test_webcoords.py
web/: dev.html
