[project]
name = "mapademic"
version = "0.1.0"
description = "A zoomable map of the academic world (OpenAlex coauthorship graph)"
requires-python = ">=3.11"
dependencies = ["duckdb>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pipeline"]
